<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Strings for the home (fullscreen) activity -->
    <string name="app_name">Gold Fish Budget</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Home</string>
    <string name="budgetTV">Budget: Food &amp; Drink</string>
    <string name="fishName">Name: Fishy</string>
    <string name="fishAge">Age: 6 Days!</string>
    <string name="endDate">Ends: 12/05/13</string>
    <string name="button_budgets">Budgets</string>
    <string name="button_settings"></string>
    <string name="button_add"></string>

    <!-- Strings for the settings activity -->
    <string name="title_activity_settings">Settings</string>
    <string name="fishNameTV">Fish\'s Name:</string>
    <string name="setFishName">Enter Name</string>
    <string name="done">Done</string>
    <string name="daysTV">Number of days:</string>
    <string name="setDays">Enter Days</string>
<<<<<<< HEAD
    <string name="budget_spinner_TV">Budget:</string>
    <string name="setDate">Date:</string>
    <string name="date">10/17/13</string>
    <string name="datePickerButton">Select Date</string>
    <string name="settings_category_spinner">Select a category</string>
    <string name="settings_new_category"></string>

=======
	<string name="budget_spinner_TV">Budget:</string>
	<string name="setDate">Date:</string>
	<string name="date">10/17/13</string>
	<string name="datePickerButton">Select Date</string>
	<string name="settings_category_spinner">Select a category</string>
	<string name="settings_new_category"></string>
	
	
	<!--  Strings for the budget activity -->
	<string name="imagebutton1"></string>
	<string name="accounts">Accounts</string>
	<string name="transactions">Transactions</string>
	
	
>>>>>>> 37b35e99f341018a3f354258c274aa983ddc1d6a
    <!-- String for the manual entry activity -->
    <string name="title_activity_manual_entry">ManualEntry</string>
    <string name="manual_entry_title">How much did you spend?</string>
    <string name="manual_entry_amount">Enter amount</string>
    <string name="manual_entry_cancel">Cancel</string>
    <string name="manual_entry_done">Done</string>
    <string name="button_add_new_category"></string>
    <string name="amountTV">Amount: </string>
    <string name="manual_entry_category_spinner">Select a category</string>

    <!--
    <string name="budget_categories_prompt">Select a category</string> 
    <string-array name="budget_categories">
        <item>Food</item>
        <item>Gas</item>
        <item>Groceries</item>
        <item>Coffee</item>
    </string-array>
    -->

    <string name="title_activity_new_category_dialog">NewCategoryDialog</string>
    <string name="new_category_ET">Enter new category</string>
    <string name="title_activity_edit_new_budget">EditNewBudget</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_transactions_pane">TransactionsPane</string>

    <!-- Strings for budget activity -->
    <string name="title_activity_budget_view">BudgetView</string>
    
    <!-- Strings for edit/new budget activity -->
    <string name="budget_category">Enter Budget Name</string>
    <string name="manual_entry">Manual Entry</string>
    <string name="cash_entry">Cash Entry</string>
    <string name="date_start">Starts</string>
    <string name="date_end">Ends</string>
    <string name="sDate">Set Date</string>
    <string name="eDate">Set Date</string>
    <string name="bAmount">Budget Amount</string>
    <string name="cancel">Cancel</string>
    <string name="alertInt">Alert Intervals</string>
    <string name="bTags">Budget Tags</string>
    <string name="alertText">Send Text Alert</string>
    <string name="alertIntPrompt">Choose Interval</string>

    <string-array name="alertIntEntries">
        <item>Every 25%</item>
        <item>Every 15%</item>
        <item>Every 5%</item>
        <item>Never</item>
    </string-array>

    

</resources>
