<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditNewBudget" >

    <EditText android:id="@+id/edit_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/budget_category" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_message"
        android:layout_below="@+id/edit_message"
        android:text="@string/manual_entry" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox1"
        android:layout_alignBottom="@+id/checkBox1"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/checkBox1"
        android:text="@string/cash_entry" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox1"
        android:layout_below="@+id/checkBox1"
        android:layout_marginTop="18dp"
        android:text="@string/date_start" />

        <Button
            android:id="@+id/pickStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView1"
            android:layout_alignBottom="@+id/textView1"
            android:layout_alignRight="@+id/checkBox2"
            android:text="@string/sDate" />

        <TextView
            android:id="@+id/startDateDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/pickStartDate"
            android:layout_alignBottom="@+id/pickStartDate"
            android:layout_toLeftOf="@+id/checkBox2"
            android:paddingLeft="4dip"
            android:text="@string/sDate" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_below="@+id/pickStartDate"
            android:layout_marginTop="48dp"
            android:text="@string/date_end" />

        <Button
            android:id="@+id/pickEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/TextView01"
            android:layout_alignBottom="@+id/TextView01"
            android:layout_alignLeft="@+id/pickStartDate"
            android:text="@string/eDate" />

        <TextView
            android:id="@+id/endDateDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/pickEndDate"
            android:layout_alignBottom="@+id/pickEndDate"
            android:layout_toLeftOf="@+id/checkBox2"
            android:paddingLeft="4dip"
            android:text="@string/eDate" />

        <TextView
            android:id="@+id/budgetAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/TextView01"
            android:layout_centerVertical="true"
            android:text="@string/bAmount"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/AlertInt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/budgetAmount"
            android:layout_below="@+id/budgetAmount"
            android:layout_marginTop="19dp"
            android:text="@string/alertInt"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/bTags"
            android:layout_below="@+id/bTags"
            android:layout_marginTop="26dp"
            android:text="@string/alertText"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textAlert"
            android:layout_alignParentBottom="true"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/cancel"
            android:layout_alignRight="@+id/pickEndDate"
            android:text="@string/done" />

        <TextView
            android:id="@+id/bTags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/AlertInt"
            android:layout_below="@+id/AlertInt"
            android:layout_marginTop="24dp"
            android:text="@string/bTags"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/totalAmt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/budgetAmount"
            android:layout_alignBottom="@+id/budgetAmount"
            android:layout_alignLeft="@+id/checkBox2"
            android:layout_alignRight="@+id/pickEndDate"
            android:ems="10"
            android:inputType="number" >
            <requestFocus />
        </EditText>

        <Spinner
            android:id="@+id/alertIntSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bTags"
            android:layout_alignLeft="@+id/totalAmt"
            android:layout_alignRight="@+id/totalAmt"
            android:layout_below="@+id/totalAmt"
            android:entries="@array/alertIntEntries"
            android:prompt="@string/alertIntPrompt" />

</RelativeLayout>