<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#e5e5e5"
    
    tools:context=".Home" >

   	<TextView
   	    android:id="@+id/fishName"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_alignParentRight="true"
   	    android:layout_alignParentTop="true"
   	    android:layout_marginRight="41dp"
   	    android:text="@string/fishName" />

   	<TextView
   	    android:id="@+id/budgetTV"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_alignParentLeft="true"
   	    android:layout_alignParentTop="true"
   	    android:text="@string/budgetTV" />

   	<TextView
   	    android:id="@+id/fishAge"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_alignLeft="@+id/fishName"
   	    android:layout_below="@+id/fishName"
   	    android:text="@string/fishAge" />

   	<Button
   	    android:id="@+id/button_budgets"
   	    android:layout_width="90dp"
   	    android:layout_height="40dp"
   	    android:layout_alignParentBottom="true"
   	    android:layout_alignParentLeft="true"
   	    android:onClick="button_budgets"
   	    android:text="@string/button_budgets" />

   	<TextView
   	    android:id="@+id/endDate"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_alignParentBottom="true"
   	    android:layout_alignParentRight="true"
   	    android:text="@string/endDate" />

   	<ImageButton
   	    android:id="@+id/button_settings"
   	    android:layout_width="wrap_content"
   	    android:contentDescription="@string/button_settings"
   	    android:layout_height="wrap_content"
   	    android:layout_alignTop="@+id/button_budgets"
   	    android:layout_centerHorizontal="true"
   	    android:background="@null"
   	    android:onClick="button_settings"
   	    android:src="@drawable/settings" />

</RelativeLayout>


