<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e5e5e5"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ManualEntry" >
    
    <TextView
        android:id="@+id/manual_entry_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/manual_entry_title" />
        <!-- 
        android:entries="@array/budget_categories"
        android:prompt="@string/budget_categories_prompt"
         -->

    <TextView
        android:id="@+id/amountTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/manual_entry_cancel"
        android:layout_marginBottom="61dp"
        android:text="@string/amountTV" />

    <Button
        android:id="@+id/manual_entry_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/manual_entry_cancel"
        android:layout_alignBottom="@+id/manual_entry_cancel"
        android:layout_alignParentRight="true"
        android:layout_marginRight="60dp"
        android:onClick="manual_entry_done"
        android:text="@string/manual_entry_done" />

    <EditText
        android:id="@+id/manual_entry_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/manual_entry_title"
        android:layout_below="@+id/manual_entry_title"
        android:layout_marginTop="16dp"
        android:ems="7"
        android:hint="@string/manual_entry_amount"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <Spinner
        android:id="@+id/manual_entry_category_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/manual_entry_amount"
        android:layout_alignRight="@+id/manual_entry_cancel"
        android:layout_below="@+id/manual_entry_amount" />

    <ImageButton
        android:id="@+id/button_add_new_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/manual_entry_category_spinner"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/manual_entry_title"
        android:background="@null"
        android:contentDescription="@string/button_add_new_category"
        android:onClick="button_add_new_category"
        android:src="@android:drawable/ic_menu_add" />

    <Button
        android:id="@+id/manual_entry_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/manual_entry_amount"
        android:layout_centerVertical="true"
        android:onClick="manual_entry_cancel"
        android:text="@string/manual_entry_cancel" />

</RelativeLayout>
